--- a/tools/docBuilder/html/templates/css/contentTemplate.css
+++ b/tools/docBuilder/html/templates/css/contentTemplate.css
@@ -1,12 +1,17 @@
 .markdown .doc-content {
-    padding-left: 16px;
     border-left: 1px solid #bdbdbd;
+    padding: 16px 16px 16px 32px;
 }
 
 .markdown .doc-content code {
-    width: 80%;
+    width: 100%;
     display: block;
     background: white;
     padding: 16px;
     border: 1px solid black;
+    overflow: auto;
+}
+
+.markdown .doc-content p {
+    text-align: justify;
 }
